fixing overflow image

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,7 @@ body {
     @apply text-[54px] lg:text-[108px] font-primary font-bold capitalize leading-[120%] tracking-[-0.05em] mb-2;
   }
 .section {
-    height: 100vh;
-    height: 100dvh;
-    width: 100vw;
-    width: 100dvw;
+  @apply h-screen w-screen;
   }
 .btn {
     @apply py-[19px] px-[50px] h-[66px] flex items-center justify-center text-base uppercase font-secondary font-semibold bg-primary text-white;
@@ -56,7 +53,7 @@ body {
     }
   } */
   
-  ::-webkit-scrollbar {
+  /* ::-webkit-scrollbar {
     width: 1.3rem;
   }
   
@@ -77,7 +74,7 @@ body {
   body {
     font-size: 1.6rem;
     background: var(--bg);
-  }
+  } */
   
   /* .container {
     max-width: 124rem;
@@ -85,11 +82,11 @@ body {
     margin: 0 auto;
   } */
   
-  .heading {
+  /* .heading {
     padding: 1rem 0;
     font-size: 3.5rem;
     text-align: center;
-  }
+  } */
   
   .swiper_container {
   
